# bauplan

./: .gitignore  .gitlint  .vale.ini  CHANGELOG.md  Cargo.toml  Justfile  README.md  buf.yaml  build.rs  cliff.toml  mise.toml  pyproject.toml  release-plz.toml
.cargo/: config.toml
bauplan-longbow/: Cargo.toml
bauplan-longbow/src/: client.rs  lib.rs  server.rs
docs/: .gitignore  Justfile  README.md  docusaurus.config.js  gen_sdk_reference.py  package.json  prod-robots.txt  pyproject.toml  redirects.js  sidebar.js
docs/pages/: datasets.mdx  faq.mdx
docs/pages/agents/: context.mdx  index.mdx  mcp.mdx  overview.mdx  setup.mdx  skills.mdx
docs/pages/common-scenarios/: branching-workflows.mdx  conflict-management.mdx  detached-runs.mdx  multi-stage-pipelines.mdx  parameterized-runs.mdx  schema-conflicts.mdx  sdk-or-cli.mdx  sql-files.mdx
docs/pages/concepts/: expectations.mdx  models.mdx  namespaces.mdx  pipelines.mdx  projects.mdx  schema-conflicts.mdx  schema_conflicts.mdx  tables.mdx
docs/pages/concepts/git-for-data/: commits-refs.mdx  data-branches.mdx  index.mdx  tags.mdx  transactional-pipelines.mdx
docs/pages/concepts/git_for_data/: commits_refs.mdx  data_branches.mdx  index.mdx  tags.mdx  walkthrough.mdx
docs/pages/examples/: data_app.mdx  data_product.mdx  expectations.mdx  import_data.mdx  index.mdx  llm.mdx  llm_tabular.mdx  medallion.mdx  mongo.mdx  nrt.mdx  pdf_analysis_openai.mdx  rag.mdx
docs/pages/guides/: casting.mdx  detached_runs.mdx  import_data.mdx  parameters.mdx  partitioning.mdx  schema_conflicts.mdx  secrets.mdx
docs/pages/integrations/: index.mdx
docs/pages/integrations/bi-tools-postgres/: index.mdx  metabase.mdx
docs/pages/integrations/bi_tools_postgres/: index.mdx  metabase.mdx
docs/pages/integrations/data-int-and-etl/: estuary.mdx  fivetran.mdx  index.mdx
docs/pages/integrations/data_int_and_etl/: estuary.mdx  fivetran.mdx  index.mdx
docs/pages/integrations/dbt/: index.mdx
docs/pages/integrations/notebooks-data-apps/: index.mdx  jupyter-notebooks.mdx  marimo.mdx  streamlit.mdx
docs/pages/integrations/notebooks_data_apps/: index.mdx  jupyter_notebooks.mdx  marimo.mdx  streamlit.mdx
docs/pages/integrations/orchestrators/: airflow.mdx  dagster.mdx  dbos.mdx  index.mdx  orchestra.mdx  prefect.mdx  temporal.mdx
docs/pages/integrations/warehouses-lakehouses/: big-query-inbound.mdx  big-query-outbound.mdx  gcs.mdx  index.mdx  r2-cloudflare-object-storage.mdx  snowflake-inbound.mdx  snowflake-outbound.mdx
docs/pages/integrations/warehouses_lakehouses/: big_query_inbound.mdx  big_query_outbound.mdx  gcs.mdx  index.mdx  snowflake_inbound.mdx
docs/pages/integrations/warehouses_lakehouses/big_query/: big_query_inbound.mdx  big_query_outbound.mdx  index.mdx
docs/pages/integrations/warehouses_lakehouses/snowflake/: index.mdx  snowflake_inbound.mdx  snowflake_outbound.mdx
docs/pages/llms/: explore_data.mdx  index.mdx  mcp_server.mdx  quick_start.mdx
docs/pages/llms/tutorial/: create.mdx  index.mdx  publish.mdx  test.mdx
docs/pages/overview/: architecture.mdx  deployment.mdx  execution-model.mdx  execution_model.mdx  index.mdx
docs/pages/reference/: cli.mdx
docs/pages/tutorial/: 00-installation.mdx  00_installation.mdx  01-quick-start.mdx  01_quick_start.mdx  02-data-branches.mdx  022-s3-permissions.mdx  02_data_branches.mdx  03-import.mdx  03_import.mdx  03_pipelines.mdx  04_import.mdx  index.mdx
docs/scripts/: generate-llm-docs.js  generate-llms-txt.js
docs/src/clientModules/: scrollToAnchor.js  tabTocSync.js
docs/src/css/: global.css  navbar.css  sidebar.css
docs/src/plugins/: remark-hidden-lines.js  tailwind-config.js
docs/src/theme/: MDXComponents.js
docs/src/theme/DocCard/: index.js  styles.module.css
docs/src/theme/DocItem/Layout/: index.js
docs/src/theme/Footer/Copyright/: index.js
docs/src/theme/Footer/Layout/: index.js
docs/src/theme/Footer/Logo/: index.js
docs/src/theme/Heading/: index.js
docs/src/theme/NavbarItem/DocSidebarDropdown/: index.js  styles.module.css
docs/src/theme/components/: Admonitions.js  Badges.js  ConceptCards.js  ExampleCard.js  ExamplesList.js  MutedNote.js
docs/static/examples/expectations/: index.html
docs/static/examples/import_data/: index.html
docs/static/examples/llm_tabular/: index.html
docs/static/examples/medallion/: index.html
docs/static/examples/mongo/: index.html
docs/static/examples/pdf_analysis_openai/: index.html
docs/static/examples/rag/: index.html
docs/static/img/icons/: github.avif  linkedin.avif  youtube.avif
examples/learn/01-pipeline-to-dashboard/: README.md  pyproject.toml
examples/learn/01-pipeline-to-dashboard/app/: viz_app.py
examples/learn/01-pipeline-to-dashboard/pipeline/: bauplan_project.yml  models.py
examples/learn/04-using-llms-with-secrets/: README.md  pyproject.toml  run.py
examples/learn/04-using-llms-with-secrets/app/: explore_analysis.py
examples/learn/04-using-llms-with-secrets/bpln_pipeline/: bauplan_project.yml  dag.py
examples/learn/08-ingestion-and-transformation-with-dagster/: .gitignore  README.md  pyproject.toml
examples/learn/08-ingestion-and-transformation-with-dagster/data/: generate_data.py
examples/learn/08-ingestion-and-transformation-with-dagster/src/: .env.example  main.py  utils.py
examples/projects/RAG-service-support-agent/: README.md  pyproject.toml
examples/projects/RAG-service-support-agent/app/: explore_and_answer.py
examples/projects/RAG-service-support-agent/pipeline/: bauplan_project.yml  models.py  pinecone_utils.py  utils.py
examples/projects/build-a-playlist-recommender/: README.md  pyproject.toml
examples/projects/build-a-playlist-recommender/app/: explore_and_recommend.py
examples/projects/build-a-playlist-recommender/pipeline/: bauplan_project.yml  models.py  mongo_utils.py  utils.py
examples/projects/medallion-for-telemetry-data/: README.md  pyproject.toml
examples/projects/medallion-for-telemetry-data/app/: viz_app.py
examples/projects/medallion-for-telemetry-data/pipeline/: bauplan_project.yml  expectations.py  models.py
src/: api.rs  (+11 more)
(+298 files in other folders)
