[workspace]
members = [".", "gen-stubs"]

[package]
name = "bauplan"
version = "0.1.0"
edition = "2024"
authors = ["Colin Marc <colin.marc@bauplanlabs.com>"]
description = "The client SDK and CLI for Bauplan"
homepage = "https://docs.bauplanlabs.com"
repository = "https://github.com/bauplanlabs/bauplan"
license = "Apache-2.0 OR MIT"
publish = false
exclude = [
    ".github/",
    "python",
    "tests/",
    "Justfile",
    "mise.toml",
    "pyproject.toml",
    "uv.lock",
]

[lib]
name = "bauplan"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "bauplan"
path = "src/main.rs"

[features]
default = []
python = ["dep:arrow-csv", "dep:parquet", "dep:pyo3", "dep:pyo3-arrow", "pyo3/chrono", "pyo3/uuid"]
_integration-tests = []

[dependencies]
anyhow = "1"
arrow = { version = "57", default-features = false, features = ["chrono-tz", "ipc_compression", "json"] }
arrow-csv = { version = "57", optional = true }
arrow-flight = "57"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dateparser = "0.2"
futures = "0.3"
gethostname = "1"
http = "1"
humantime = "2"
iceberg-catalog-rest = "0.8"
indicatif = "0.18"
nondestructive = { version = "0.0.28", features = ["serde", "yaml"] }
opentelemetry = { version = "0.28", default-features = false, features = ["trace"] }
polyglot-sql = "0.1.5"
prost = "0.14"
prost-types = "0.14"
parquet = { version = "57", optional = true }
pyo3 = { version = "0.28", optional = true, features = ["experimental-inspect", "multiple-pymethods"] }
pyo3-arrow = { version = "0.16", optional = true }
rand = "0.8"
regex = "1"
rsa = { version = "0.9", features = ["pem", "sha2"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_path_to_error = "0.1"
serde_qs = "0.15"
serde_yaml = "0.9"
tabwriter = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.14", features = ["tls-native-roots"] }
tonic-prost = "0.14"
tracing = "0.1"
tracing-indicatif = "0.3"
tracing-subscriber = { version = "0.3", features = ["chrono", "env-filter"] }
ureq = "3"
url = "2"
uuid = { version = "1", features = ["serde"] }
yansi = { version = "1", features = ["detect-tty"] }
resolve-path = "0.1"
zip = { version = "4", default-features = false, features = ["deflate"] }

[build-dependencies]
anyhow = "1"
tonic-prost-build = "0.14"

[dev-dependencies]
assert_cmd = "2"
assert_matches = "1"
bstr = "1.12.1"
http-body-util = "0.1"
predicates = "3"
reqwest = { version = "0.12", features = ["json"] }
similar = { version = "2", features = ["bytes"] }
tempfile = "3"
textwrap = "0.16"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tree-sitter = "0.26"
tree-sitter-md = "0.5"
tree-sitter-python = "0.25"
yansi = "1.0.1"

# TODO: we're temporarily pulling in a PR that includes docstrings in the built
# dylib and updates pyo3-introspection to pull the back out when generating pyi
# stubs.
# https://github.com/PyO3/pyo3/pull/5782
[patch.crates-io]
pyo3 = { git = "https://github.com/Tpt/pyo3.git", branch = "tpt/stub-doc" }
pyo3-build-config = { git = "https://github.com/Tpt/pyo3.git", branch = "tpt/stub-doc" }
pyo3-ffi = { git = "https://github.com/Tpt/pyo3.git", branch = "tpt/stub-doc" }
pyo3-macros = { git = "https://github.com/Tpt/pyo3.git", branch = "tpt/stub-doc" }
pyo3-macros-backend = { git = "https://github.com/Tpt/pyo3.git", branch = "tpt/stub-doc" }

[profile.release]
strip = true
