[workspace]
members = ["bauplan-longbow"]

[workspace.dependencies]
anyhow = "1"
futures = "0.3"
thiserror = "2"
tokio = { version = "1" }
tracing = { version = "0.1" }
url = "2"

[workspace.package]
version = "0.1.12"
edition = "2024"
authors = ["Colin Marc <colin.marc@bauplanlabs.com>"]
homepage = "https://docs.bauplanlabs.com"
repository = "https://github.com/bauplanlabs/bauplan"
license = "Apache-2.0 OR MIT"


[package]
name = "bauplan"
default-run = "bauplan"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "The client SDK and CLI for Bauplan"
homepage.workspace = true
repository.workspace = true
license.workspace = true
exclude = [
    ".*",
    "/python",
    "tests/",
    "CHANGELOG.md",
    "Justfile",
    "mise.toml",
    "pyproject.toml",
    "release-plz.toml",
    "uv.lock",
]

[lib]
name = "bauplan"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "bauplan"
path = "src/main.rs"

[[bin]]
name = "gen-cli-docs"
path = "src/gen_cli_docs.rs"

[features]
default = []
python = ["dep:arrow-csv", "dep:parquet", "dep:pyo3", "dep:pyo3-arrow", "dep:pyo3-log", "dep:log", "pyo3/chrono", "pyo3/uuid"]
_integration-tests = []
_check-parse = []

[dependencies]
anstream = "0.6"
anstyle = "1"
anyhow.workspace = true
bauplan-longbow = { path = "bauplan-longbow", default-features = false, features = ["client"] }
arrow = { version = "58", default-features = false, features = ["chrono-tz", "ipc_compression", "json"] }
arrow-csv = { version = "58", optional = true }
arrow-flight = "58"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dateparser = "0.2"
futures.workspace = true
gethostname = "1"
http = "1"
humantime = "2"
iceberg-catalog-rest = { git = "https://github.com/apache/iceberg-rust.git", rev = "1b640095" }
indicatif = "0.18"
log = { version = "0.4", optional = true }
nondestructive = { version = "0.0.28", features = ["serde", "yaml"] }
opentelemetry = { version = "0.28", default-features = false, features = ["trace"] }
parquet = { version = "58", optional = true }
polyglot-sql = "0.1"
prost = "0.14"
prost-types = "0.14"
percent-encoding = "2"
pyo3 = { version = "0.28", optional = true, features = ["experimental-inspect", "multiple-pymethods"] }
pyo3-arrow = { version = "0.17", optional = true }
pyo3-log = { version = "0.13", optional = true }
rand = "0.8"
regex = "1"
resolve-path = "0.1"
rsa = { version = "0.9", features = ["pem", "sha2"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_path_to_error = "0.1"
serde_qs = "0.15"
serde_yaml = "0.9"
tera = { version = "1", default-features = false }
tabwriter = "1"
textwrap = "0.16"
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
toml = { version = "0.8", features = ["preserve_order"] }
tonic = { version = "0.14", features = ["tls-native-roots"] }
tonic-prost = "0.14"
tracing = { workspace = true, features = ["log"] }
tracing-indicatif = "0.3"
tracing-subscriber = { version = "0.3", features = ["chrono", "env-filter"] }
ureq = "3"
url.workspace = true
uuid = { version = "1", features = ["serde", "v4"] }
zip = { version = "4", default-features = false, features = ["deflate"] }

[target.'cfg(target_os = "macos")'.dependencies]
ureq = { version = "3", features = ["platform-verifier"] }

[build-dependencies]
anyhow = "1"
tonic-prost-build = "0.14"

[dev-dependencies]
assert_cmd = "2"
assert_matches = "1"
bstr = "1"
escargot = "0.5"
http-body-util = "0.1"
predicates = "3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
shlex = "1"
similar = { version = "2", features = ["bytes"] }
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tree-sitter = "0.26"
tree-sitter-md = "0.5"
tree-sitter-python = "0.25"
walkdir = "2.5.0"

# TODO: replace this with >=0.28.3 (here and in gen-stubs) when it lands.
# https://github.com/PyO3/pyo3/pull/5782
[patch.crates-io]
pyo3 = { git = "https://github.com/pyo3/pyo3", rev = "f3396b31c4e1e4b4952e7c1ca9283a453c6dd91d" }
pyo3-build-config = { git = "https://github.com/pyo3/pyo3", rev = "f3396b31c4e1e4b4952e7c1ca9283a453c6dd91d" }
pyo3-ffi = { git = "https://github.com/pyo3/pyo3", rev = "f3396b31c4e1e4b4952e7c1ca9283a453c6dd91d" }
pyo3-macros = { git = "https://github.com/pyo3/pyo3", rev = "f3396b31c4e1e4b4952e7c1ca9283a453c6dd91d" }
pyo3-macros-backend = { git = "https://github.com/pyo3/pyo3", rev = "f3396b31c4e1e4b4952e7c1ca9283a453c6dd91d" }

[profile.release]
strip = true
