[build-system]
requires = ["maturin>=1.11,<2.0"]
build-backend = "maturin"

[project]
name = "bauplan"
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
    "pyarrow>=23.0.0",
]

[dependency-groups]
dev = [
    "griffe>=1.4.0",
    "pyarrow>=17.0.0",
    "pyarrow-stubs>=20.0.0",
    "pytest>=8.3.5",
    "gitlint-core",
    "ruff>=0.14.14",
    "ty>=0.0.15",
]

[tool.maturin]
python-source = "python"
module-name = "bauplan._internal"
bindings = "pyo3"
features = ["pyo3/extension-module", "python"]
data = "python/data"
use_base_python = true

[tool.ty.src]
exclude = ["tests/fixtures"]

# Recompile whenever a rust file changes.
[tool.uv]
cache-keys = [
    { file = "pyproject.toml" },
    { file = "Cargo.toml" },
    { file = "src/**/*.rs" },
]

[tool.uv.sources]
gitlint-core = { git = "https://github.com/colinmarc/gitlint", branch = "conventional-options", subdirectory = "gitlint-core" }
