[build-system]
requires = ["maturin>=1.11,<2.0"]
build-backend = "maturin"

[project]
name = "bauplan"
requires-python = ">=3.10"
dynamic = ["version"]
readme = "README.md"
description = "The client SDK and CLI for Bauplan"
authors = [{ name = "Bauplan Inc." }]
license = "Apache-2.0 OR MIT"
keywords = [
    "bauplan",
    "data-pipelines",
    "iceberg",
    "lakehouse",
    "data-versioning",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = ["pyarrow>=15.0.0"]

[project.urls]
Documentation = "https://docs.bauplanlabs.com/"
Homepage = "https://www.bauplanlabs.com/"
Issues = "https://github.com/BauplanLabs/bauplan/issues"
Repository = "https://github.com/BauplanLabs/bauplan/"
Changelog = "https://github.com/BauplanLabs/bauplan/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "griffe>=1.4.0",
    "pyarrow>=17.0.0",
    "pyarrow-stubs>=20.0.0",
    "pytest>=8.3.5",
    "gitlint-core",
    "ruff>=0.14.14",
    "ty>=0.0.15",
    "apache-airflow>=3.1.8",
    "dagster>=1.12.20",
    "dbos>=2.16.0",
    "duckdb>=1.5.1",
    "google-cloud-bigquery>=3.40.1",
    "ipywidgets>=8.1.8",
    "marimo>=0.21.1",
    "matplotlib>=3.10.8",
    "openai>=2.30.0",
    "pandas>=2.3.3",
    "pandas-stubs>=2.3.3.260113",
    "pendulum>=3.2.0",
    "plotly>=6.6.0",
    "prefect>=3.6.23",
    "pyiceberg>=0.11.1",
    "streamlit>=1.55.0",
    "temporalio>=1.24.0",
]

[tool.maturin]
python-source = "python"
module-name = "bauplan._internal"
bindings = "pyo3"
features = ["pyo3/extension-module", "python"]
data = "python/data"
strip = true
use-base-python = true
include = [
    # https://github.com/rust-lang/cargo/issues/5933
    { path = "LICENSE-APACHE", format = "sdist" },
    { path = "LICENSE-MIT", format = "sdist" },
]

[tool.ruff]
exclude = [
    "tests/fixtures",
    "src/cli/init/models.py",
    "docs/gen_sdk_reference.py",
    "examples",
]

[tool.ruff.lint]
select = [
    "ANN001", # Missing type annotation for function argument
]

[tool.ty.src]
exclude = [
    "tests/fixtures",
    "src/cli/init/models.py",
    "docs/gen_sdk_reference.py",
    "examples"
]

# Whitelist imports of bauplan._internal in __init__.py. The rust extension
# module gets built there.
[tool.ty.analysis]
allowed-unresolved-imports = ["bauplan._internal", "bauplan._internal.*"]

# Recompile whenever a rust file changes.
[tool.uv]
cache-keys = [
    { file = "pyproject.toml" },
    { file = "Cargo.toml" },
    { file = "src/**/*.rs" },
]

[tool.uv.sources]
gitlint-core = { git = "https://github.com/colinmarc/gitlint", branch = "conventional-options", subdirectory = "gitlint-core" }
