[project]
name = "docs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.12.12"
dependencies = [
    "bauplan",
    "griffe>=1.12.1",
    "plotly>=6.3.0",
    "pytest~=9.0.2",
    "pytest-markdown-docs>=0.9.0",
    "streamlit>=1.48.1",
]

[tool.uv.sources]
bauplan = { path = "../" }
