[project]
name = "rag-service-support-agent"
version = "0.1.0"
description = "RAG pipeline with bauplan and Pinecone"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bauplan>=0.1.9",
    "matplotlib>=3.10.0",
    "openai>=1.57.0",
    "pinecone>=5.4.2",
    "pinecone-plugin-records>=1.1.0",
    "polars>=1.38.0",
    "streamlit>=1.41.0",
]
